chess board refactoring

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <main>
             <div id="Clock" class="Clock">
                 <div>
-                    wight
+                    White
                 </div>
                 <button id ="Reset">
                         Reset Games
@@ -37,22 +37,22 @@
                    </span>
                     
                 </div> 
-                <div id="WightPromotionOpton" class="Hide">
+                <div id="WhitePromotionOpton" class="Hide">
                     <span id="WQ" class="PromotionPiece">
-                        <img class="WightPromotionPieceIcon" src="icons/WightQueen.png">
+                        <img class="WhitePromotionPieceIcon" src="icons/WhiteQueen.png">
                     </span >
                     <span id="WR" class="PromotionPiece">
-                        <img  class="WightPromotionPieceIcon" src="icons/WightRook.png">
+                        <img  class="WhitePromotionPieceIcon" src="icons/WhiteRook.png">
                     </span>
                     <span id="WB" class="PromotionPiece">
-                        <img class="WightPromotionPieceIcon" src="icons/WightBishop.png">
+                        <img class="WhitePromotionPieceIcon" src="icons/WhiteBishop.png">
                     </span>
                     <span id="WK" class="PromotionPiece">
-                        <img class="WightPromotionPieceIcon" src="icons/WightKnight.png">
+                        <img class="WhitePromotionPieceIcon" src="icons/WhiteKnight.png">
                    </span>
                 </div> 
-                <div class="WightWinner">
-                    WIGHT WON
+                <div class="WhiteWinner">
+                    White WON
                 </div>
                 <div class="BlackWinner">
                     BLack WON
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </main>
-        <script src="BulidBoard.js"></script>
+        <script src="BuildBoard.js"></script>
         <script src="main.js" type="module"></script>
         <script src="StartingPos.js" type="module"></script>
         <script src="Move.js" type="module"></script>
