added winning banner

--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
                         <img class="WhitePromotionPieceIcon" src="icons/WhiteKnight.png">
                    </span>
                 </div> 
-                <div class="WhiteWinner">
+                <div id="WhiteWinner" class="Result">
                     White WON
                 </div>
-                <div class="BlackWinner">
+                <div id="BlackWinner" class="Result">
                     BLack WON
+                </div>
+                <div id="Draw" class="Result">
+                    Draw
                 </div>
             </div>
             <div class="Clock">
