--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,17 @@
     <body>
         <main>
             <div id="Clock" class="Clock">
-                <div>
-                    White
-                </div>
+                <form>
+                    <label for="Room">Enter room id</label>
+                    <input type="text" name="name" id="roomId" required>
+                    <button id ="joinRoom">Join Room</button>
+                  </form>
+                  <button id="newGame">
+                      Creat game
+                  </button>                  
+                  <button id ="Rotate-btn">
+                    <!-- rotate -->
+                  </button>   
                 <button id ="Reset">
                         Reset Games
                 </button>  
