Added anticheat system

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,12 @@
             <div id="Clock" class="Clock">
                 <form>
                     <label for="Room">Enter room id</label>
-                    <input type="text" name="name" id="roomId" required>
+                    <input type="text" name="name" id="inputRoomId" required>
                     <button id ="joinRoom">Join Room</button>
                   </form>
+                  <div id="roomId">
+                    hello
+                  </div>
                   <button id="newGame">
                       Creat game
                   </button>                  
