--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
                   </button>                  
                   <button id ="Rotate-btn">
                     <!-- rotate -->
-                  </button>   
+                    <img src="icons/Flipicon.jpg" alt="flip-icon">
+                </button>   
                 <button id ="Reset">
                         Reset Games
                 </button>  
