final bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
         <main>
             <div class="controles">
                 <form class="joining_form">
-                    <div class="joing_field">
-                        <label for="Room">Enter room id</label>
+                    <div class="joining_field">
+                        <label for="Room">Enter Room id</label>
                         <input type="text" name="name" id="inputRoomId" required>
                         <button id ="joinRoom">Join Room</button>
                     </div>
@@ -20,7 +20,7 @@
                         
                     </div>
                     <button id="newGame">
-                        Creat game
+                        Create game
                     </button>                  
                 </form>
                 <div class="inGameButtons">
@@ -31,7 +31,7 @@
                       Reset Game
                     </button>
                     <button id="resign">
-                        resign
+                        Resign
                     </button>
                 </div>
                     
